force-app/main/default/objects/Plan_Template__c/Plan_Template__c.object-meta.xml
<CustomObject>
    <description>This object represents the blueprint for plan templates and includes the configuration settings for the plan template.</description>
    <label>Plan Template</label>
    <nameField>
        <displayFormat>PT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>