force-app/main/default/objects/Plan_Template__c/fields/No_of_days_to_add_in_date__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_to_add_in_date__c</fullName>
    <label>No of days to add in date</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>