force-app/main/default/objects/Plan_Template__c/fields/Parent_Child_Relation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Child_Relation__c</fullName>
    <inlineHelpText>Follow the format &lt;Parent Object API Name&gt; - &lt;Child Object API Name&gt; e.g, Account-Contact</inlineHelpText>
    <label>Parent Child Relation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>