force-app/main/default/objects/Plan_Template__c/fields/Parent_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Date_Field__c</fullName>
    <description>this is date field of parent to consider for goal template.</description>
    <label>Parent Date Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>