force-app/main/default/objects/Plan_Template__c/fields/Plan_template_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_template_Name__c</fullName>
    <label>Plan template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>